--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Mouse Mousekewitz
-description: This is Mouse Mousekewitz' homepage.
+title: Artur Voit-Antal
+description: Versatile and driven Mater's student in Natural Language Processing
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
